Change Styling and update analytics

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" type="text/css" href="react-notifications/lib/notifications.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <title>bitfwd's Ethereum Ropsten Faucet</title>
+    <title>Wanchain Faucet</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118291615-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123889185-4"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      gtag('config', 'UA-118291615-1');
+      gtag('config', 'UA-123889185-4');
     </script>
+
   </head>
   <body>
     <noscript>
